cluster/media/overseerr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: overseerr
spec:
  ports:
    - name: http
      port: 80
      targetPort: 5055
  selector:
    app: overseerr
