cluster/media/overseerr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: overseerr
spec:
  rules:
    - host: overseerr.sko.ai
      http:
        paths:
          - backend:
              service:
                name: overseerr
                port: 
                  number: 80
            path: /
            pathType: Prefix
